--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-01-09}
+  \date{2018-01-11}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -705,8 +705,8 @@ sampling. We have
 
 where \(\sigma^2 = Var(\epsilon)\)
 
-In general, \(\sigma^2\) is know known, but can be estimated from the
-data. The estimate of \(\sigma\) is known as the \emph{residual standard
+In general, \(\sigma^2\) is unknown, but can be estimated from the data.
+The estimate of \(\sigma\) is known as the \emph{residual standard
 error}, and is given by
 
 \[ \text{RSE} = \sqrt{\frac{\text{RSS}}{(n-2)}} \]
